--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>Hakkımda</title>
 </head>
-<body>
+<body id="index_sayfa">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand " href="#"><span class="baslik">Bazinga</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse">
@@ -19,13 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link" href="#">Eğitim</a>
+              <a class="nav-link" href="/egitimcv.html">Eğitim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Şehrim</a>
+              <a class="nav-link" href="/sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Hobilerim</a>
+              <a class="nav-link" href="/mirasimiz.html">Mirasımız</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/hobilerim.html">Hobilerim</a>
             </li>
           </ul>
           <div class="container-fluid justify-content-end">
@@ -63,13 +66,7 @@
                 </ul>
               </div>
             </div>
-            <div class="row border justify-content-center ">
-              <divc class="col-3 border border-dark">
-                <p class="h5 text-center">Görseller için</p>
-                <button class="btn btn-outline-dark"><i class="bi bi-arrow-down"></i>
-                </button>
-              </div>
-            </div>  
+            
           </div>
         </div>
         </div>
