--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body id="index_sayfa">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand " href="#"><span class="baslik">Bazinga</span></a>
+      <a class="navbar-brand " href="/index.html"><img src="sheldon.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +45,7 @@
     <div class="container">
       <div class="row justify-content-center align-items-center" style="height: 80%;">
         <div class="col-7">
-          <div class="card">
+          <div class="card card_index">
             <img src="ben.png" class="rounded card-img-top w-50 mx-auto" alt="...">
             <div class="card-text mx-3 px-3">
               <p class="h4 my-3 text-center">Ben kimim?</p>
