All images moved to img folder and paths changed in html files

--- a/sehrim.html
+++ b/sehrim.html
@@ -14,7 +14,7 @@
 </head>
 <body id="sehrim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #a51818;">
-      <a class="navbar-brand " href="/index.html"><img src="flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+      <a class="navbar-brand " href="/index.html"><img src="img/flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,35 +65,35 @@
                     <div class="carousel-inner">
                       
                       <div class="carousel-item">
-                        <a href="tophane.html"><img class="d-block img-fluid mx-auto" src="tophane.png" alt="First slide"></a>
+                        <a href="tophane.html"><img class="d-block img-fluid mx-auto" src="img/tophane.png" alt="First slide"></a>
                         <div class="carousel-caption d-none d-md-block w-50 mx-auto">
                           <h5>Tophane</h5>
                           <p>Tophane, Bursa’nın tam merkezinde bulunan tarihi ve turistik bir yerdir...</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <a href="yesilturbe.html"><img class="d-block img-fluid mx-auto"  src="yesilturbe.png" alt="First slide"></a>
+                        <a href="yesilturbe.html"><img class="d-block img-fluid mx-auto"  src="img/yesilturbe.png" alt="First slide"></a>
                         <div class="carousel-caption d-none d-md-block w-50 mx-auto">
                           <h5>Yeşil Türbe</h5>
                           <p>Yeşil Türbe, Osmanlı’nın beşinci Sultanı Mehmed I’in türbesidir...</p>
                         </div>
                       </div>
                       <div class="carousel-item active">
-                        <a href="ulucami.html"><img class="d-block img-fluid mx-auto"  src="Ulucamii.png" alt="First slide"></a>
+                        <a href="ulucami.html"><img class="d-block img-fluid mx-auto"  src="img/Ulucamii.png" alt="First slide"></a>
                         <div class="carousel-caption d-none d-md-block w-50 mx-auto">
                           <h5>Ulu Camii</h5>
                           <p>Bursa Ulu Cami, Bursa’da bulunan tarihi bir camidir...</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <a href="cumalikizik.html"><img class="d-block img-fluid mx-auto" src="cumalikizik.png" alt="First slide"></a>
+                        <a href="cumalikizik.html"><img class="d-block img-fluid mx-auto" src="img/cumalikizik.png" alt="First slide"></a>
                         <div class="carousel-caption d-none d-md-block w-50 mx-auto">
                           <h5>Cumalıkızık Köyü</h5>
                           <p>Cumalıkızık, Bursa’nın Yıldırım ilçesine bağlı bir köydür ve Bursa şehir merkezine 11 kilometre uzaklıktadır...</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <a href="irgandi.html"><img class="d-block img-fluid mx-auto" src="irgandi.png" alt="First slide"></a>
+                        <a href="irgandi.html"><img class="d-block img-fluid mx-auto" src="img/irgandi.png" alt="First slide"></a>
                         <div class="carousel-caption d-none d-md-block w-50 mx-auto">
                           <h5>Irgandı Köprüsü</h5>
                           <p>Irgandı Köprüsü, Bursa kentinde yer alan, zanaatçıların geleneksel el sanatlarını icra ettiği bir köprüdür...</p>
