--- a/yesilturbe.html
+++ b/yesilturbe.html
@@ -14,7 +14,7 @@
 </head>
 <body id="sehrim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #a51818;">
-      <a class="navbar-brand " href="/index.html"><img src="flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+      <a class="navbar-brand " href="/index.html"><img src="img/flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
               <div  class="row justify-content-center ">
                 <div class="col-1"></div>
                 <div class="col-sm-10">
-                    <img src="yesilturbe.png" class="img-fluid mx-auto" alt="Responsive image">
+                    <img src="img/yesilturbe.png" class="img-fluid mx-auto" alt="Responsive image">
     
                 </div>
                 <div class="col-1"></div>
