--- a/egitimcv.html
+++ b/egitimcv.html
@@ -15,7 +15,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
             
-        <a class="navbar-brand " href="/index.html"><img src="gl_bw.jpeg" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+        <a class="navbar-brand " href="/index.html"><img src="img/gl_bw.jpeg" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse">
           <span class="navbar-toggler-icon"></span>
         </button>
