--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body id="index_sayfa">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand " href="/index.html"><img src="sheldon.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+      <a class="navbar-brand " href="/index.html"><img src="img/sheldon.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse">
           <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
       <div class="row justify-content-center align-items-center" style="height: 80%;">
         <div class="col-7">
           <div class="card card_index">
-            <img src="ben.png" class="rounded card-img-top w-50 mx-auto" alt="...">
+            <img src="img/ben.png" class="rounded card-img-top w-50 mx-auto" alt="...">
             <div class="card-text mx-3 px-3">
               <p class="h4 my-3 text-center">Ben kimim?</p>
               <p class="text-justify">
