--- a/cumalikizik.html
+++ b/cumalikizik.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="/egitimcv.html">Eğitim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sehrim.html">Şehrim</a>
+              <a class="nav-link active" href="/sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/mirasimiz.html">Mirasımız</a>
