--- a/egitimcv.html
+++ b/egitimcv.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link" href="/egitimcv.html">Eğitim</a>
+              <a class="nav-link active " href="/egitimcv.html">Eğitim</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/sehrim.html">Şehrim</a>
