tüm sayfaların navbarına iletisim bolumu eklendi

--- a/iletisim.html
+++ b/iletisim.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/hobilerim.html">Hobilerim</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/iletisim.html">İletişim</a>
+            </li>
           </ul>
           <div class="container-fluid justify-content-end">
             <div class="row">
