--- a/irgandi.html
+++ b/irgandi.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/hobilerim.html">Hobilerim</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/iletisim.html">İletişim</a>
+            </li>
           </ul>
           <div class="container-fluid justify-content-end">
             <div class="row">
