sayfaların temaları hakkında bilgilendirme metni yazıldı

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                 ilgilenmekten ve felsefe üzerine kitaplar okumaktan zevk alırım. Pek fazla sporla aram yoktur, daha çok günlerim 
                 kütüphanede ya bilgisayar başında ya da kitap başında geçer. Gezmeyi de oldukça severim, İstanbula gider sık sık gezerim. 
               </p>
+              <p class="text-justify mt-2">Not: Web sitesinin her bir sayfası The Big Bang Theory dizisinde geçen çizgi roman ve filmlerin temalarına göre hazırlanmıştır.
+                                             Giriş sayfası olarak bu sayfa Sheldon'ın meşhur "The Doppler Efect" kostümünden ilham alınarak hazırlanmıştır</p>
             </div>
             <div class="card-text mx-5">
               <div class="social-links">
