--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -13,10 +13,10 @@
 <body id="mirasimiz_sayfa">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff000;">
       <a class="navbar-brand " href="/index.html"><img src="img/batman-removebg-preview.png" width="80" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link" href="/egitimcv.html">Eğitim</a>
