--- a/tophane.html
+++ b/tophane.html
@@ -15,10 +15,10 @@
 <body id="sehrim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #a51818;">
       <a class="navbar-brand " href="/index.html"><img src="img/flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link" href="/egitimcv.html">Eğitim</a>
