--- a/login.html
+++ b/login.html
@@ -47,8 +47,37 @@
 
     
     <div class="container">
+      <div class="row justify-content-center align-items-center" style="height: 80%;">
+        <div class="col-6">
+          <div class="card">
+            <div class="container-fluid border border-dark">
+              <div class="row justify-content-center">
+                <div class="col-5">
+                  <p class="h3 text-center mt-3"> Giriş Yap </p>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-10">
+                  <form action="/login.php" method="POST">
+                    <div class="form-group my-5">
+                      <label for="email">Kullanıcı Adı</label>
+                      <input type="email" class="form-control" id="k_adi" name="k_adi" placeholder="Kullanıcı adınızı girin" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                      <small class="form-text text-muted">Lütfen email formatında bir kullanıcı adı giriniz</small>
+                    </div>
+                    <div class="form-group">
+                      <label for="sifre">Şifre</label>
+                      <input type="password" class="form-control" id="sifre" name="sifre" placeholder="Şifrenizi girin" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary my-3">Submit</button>
+                  </form>
+                  
+                </div>  
+              </div>
+            </div>
 
-<div></div>
+          </div>
+        </div>
+        </div>
 
       </div>
 
