--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
               </div>
               <div class="row justify-content-center">
                 <div class="col-10">
-                  <form action="login_control.php" method="POST">
+                  <form action="login.php" method="post">
                     <div class="form-group my-5">
                       <label for="email">Kullanıcı Adı</label>
                       <input type="email" class="form-control" id="k_adi" name="k_adi" placeholder="Kullanıcı adınızı girin" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
