--- a/hobilerim.html
+++ b/hobilerim.html
@@ -15,33 +15,33 @@
 </head>
 <body id="hobilerim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark " style="background-color: #0060AA;">
-        <a class="navbar-brand" href="/">   
-        <a class="navbar-brand " href="/"><img src="img/superman.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+        <a class="navbar-brand" href="">   
+        <a class="navbar-brand " href=""><img src="img/superman.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link " href="/egitimcv.html">Eğitim</a>
+              <a class="nav-link " href="egitimcv.html">Eğitim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sehrim.html">Şehrim</a>
+              <a class="nav-link" href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/mirasimiz.html">Mirasımız</a>
+              <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/hobilerim.html">Hobilerim</a>
+              <a class="nav-link active" href="hobilerim.html">Hobilerim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim.html">İletişim</a>
+              <a class="nav-link" href="iletisim.html">İletişim</a>
             </li>
           </ul>
           <div class="container-fluid justify-content-end">
             <div class="row">
               <div class="col-4 ">
-                <a href="/login.html" class="btn text-white" style="background-color: #c50c02;">Login</a>
+                <a href="login.html" class="btn text-white" style="background-color: #c50c02;">Login</a>
               </div>
             </div>
           </div>
