--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body id="index_sayfa">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand " href="/index.html"><img src="img/sheldon.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+      <a class="navbar-brand " href="index.html"><img src="img/sheldon.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,25 +21,25 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link" href="/egitimcv.html">Eğitim</a>
+              <a class="nav-link" href="egitimcv.html">Eğitim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/sehrim.html">Şehrim</a>
+              <a class="nav-link" href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/mirasimiz.html">Mirasımız</a>
+              <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/hobilerim.html">Hobilerim</a>
+              <a class="nav-link" href="hobilerim.html">Hobilerim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim.html">İletişim</a>
+              <a class="nav-link" href="iletisim.html">İletişim</a>
             </li>
           </ul>
           <div class="container-fluid justify-content-end">
             <div class="row">
               <div class="col-4 ">
-                <a href="/login.html" class="btn btn-primary">Login</a>
+                <a href="login.html" class="btn btn-primary">Login</a>
               </div>
             </div>
           </div>
