--- a/ulucami.html
+++ b/ulucami.html
@@ -14,32 +14,32 @@
 </head>
 <body id="sehrim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #a51818;">
-      <a class="navbar-brand " href="/index.html"><img src="img/flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
+      <a class="navbar-brand " href="index.html"><img src="img/flash.png" width="50" height="50" alt="Logo" class="d-inline-block align-text-center"><span class="baslik">Bazinga</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link" href="/egitimcv.html">Eğitim</a>
+              <a class="nav-link" href="egitimcv.html">Eğitim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active " href="/sehrim.html">Şehrim</a>
+              <a class="nav-link active " href="sehrim.html">Şehrim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/mirasimiz.html">Mirasımız</a>
+              <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/hobilerim.html">Hobilerim</a>
+              <a class="nav-link" href="hobilerim.html">Hobilerim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim.html">İletişim</a>
+              <a class="nav-link" href="iletisim.html">İletişim</a>
             </li>
           </ul>
           <div class="container-fluid justify-content-end">
             <div class="row">
               <div class="col-4 ">
-                <a href="/login.html" class="btn" style="background-color: #ffd818	;">Login</a>
+                <a href="login.html" class="btn" style="background-color: #ffd818	;">Login</a>
               </div>
             </div>
           </div>
