--- a/login.html
+++ b/login.html
@@ -49,8 +49,8 @@
     <div class="container">
       <div class="row justify-content-center align-items-center" style="height: 80%;">
         <div class="col-6">
-          <div class="card">
-            <div class="container-fluid border border-dark">
+          <div class="card rounded">
+            <div class="container-fluid">
               <div class="row justify-content-center">
                 <div class="col-5">
                   <p class="h3 text-center mt-3"> Giriş Yap </p>
