--- a/egitimcv.html
+++ b/egitimcv.html
@@ -60,28 +60,24 @@
                 </article>
 
                 <article>
-                   <div class="row mt-5 justify-content-start">
-                       <div class="col-1"></div>
-                       <div class="col-3"><p class="h5"><b>Özet:</b></p></div>
+                   <div class="row mt-5 justify-content-center">
+                       <div class="col-10 "><p class="h5"><b>Özet:</b></p></div>
                    </div>
-                   <div class="row ml-2 justify-content-start ">
-                       <div class="col-1"></div>
-                       <div class="col-10"><p class="text-justify"> Sakarya Üniversitesi'nde birinci sınıf bilgisayar mühendisliği öğrencisiyim. Bilgisayar bilimi serüvenim, liseye başladığım zamanlarda robotikle başladı. Bir süre robotik alanında çalıştıktan sonra, gerçekten zevk aldığım alanın programlama olduğunu fark ettim, robotik değil. Bu nedenle, programlama maceramın ilk dönemlerinde birçok farklı alanda deneyimledikten sonra, bilgisayar görüntüleme alanına odaklanmaya karar verdim. Lise yıllarımda, bilgisayar görüntüleme ve otomasyonu birleştirdiğim bir proje (KADSIS) ile TEKNOFEST ve TÜBİTAK yarışmalarında derece elde ettim. YKS'den sonra, projeler sürecinde kullandığım görüntü işleme için makine öğrenimi ve derin öğrenme modellerinin teorik ve matematiksel yönlerini daha iyi anlamak için öğrenmeye başladım. Şu anda Yapay Zeka'da "Representaion Learning" üzerine araştırmalar yapıyor ve bilgimi ve kodlama becerilerimi geliştirmek için çeşitli PyTorch modelleri uyguluyorum. Uzmanlık alanım bilgisayar görüntüleme olsa da, yapay zeka'nın diğer alanlarını keşfetmek ve yeni ve zorlu projelere girişmek beni ilgilendiriyor. GitHub profilimde yaptığım bazı çalışmaları inceleyebilirsiniz: https://github.com/IsmailKonak.
+                   <div class="row justify-content-center ">
+                       <div class="col-9 mx-md-5 mx-xs-3"><p class="text-justify"> Sakarya Üniversitesi'nde birinci sınıf bilgisayar mühendisliği öğrencisiyim. Bilgisayar bilimi serüvenim, liseye başladığım zamanlarda robotikle başladı. Bir süre robotik alanında çalıştıktan sonra, gerçekten zevk aldığım alanın programlama olduğunu fark ettim, robotik değil. Bu nedenle, programlama maceramın ilk dönemlerinde birçok farklı alanda deneyimledikten sonra, bilgisayar görüntüleme alanına odaklanmaya karar verdim. Lise yıllarımda, bilgisayar görüntüleme ve otomasyonu birleştirdiğim bir proje (KADSIS) ile TEKNOFEST ve TÜBİTAK yarışmalarında derece elde ettim. YKS'den sonra, projeler sürecinde kullandığım görüntü işleme için makine öğrenimi ve derin öğrenme modellerinin teorik ve matematiksel yönlerini daha iyi anlamak için öğrenmeye başladım. Şu anda Yapay Zeka'da "Representaion Learning" üzerine araştırmalar yapıyor ve bilgimi ve kodlama becerilerimi geliştirmek için çeşitli PyTorch modelleri uyguluyorum. Uzmanlık alanım bilgisayar görüntüleme olsa da, yapay zeka'nın diğer alanlarını keşfetmek ve yeni ve zorlu projelere girişmek beni ilgilendiriyor. GitHub profilimde yaptığım bazı çalışmaları inceleyebilirsiniz: https://github.com/IsmailKonak.
                        </p></div>
                    </div>
                 </article>
 
               <article>
-                   <div class="row mt-3 justify-content-start">
-                       <div class="col-1"></div>
-                       <div class="col-3"><p class="h5"><b>Eğitim:</b></p></div>
+                   <div class="row mt-3 justify-content-center">
+                       <div class="col-10"><p class="h5"><b>Eğitim:</b></p></div>
                    </div>
                    <div class="row mt-3 justify-content-center">
-                       <div class="col-10">
+                       <div class="col-md-10 mx-md-5 mx-xs-3">
                            <ul class="list-inline-item">
                                <li class="list-inline mb-1">Lisans, Bilgisayar Mühendisliği (Sakarya Üniversitesi) | 2022 GANO: 3.87</li>
-                               <li class="list-inline">Lise, Uluslararası Murat Hüdavendigar AIHL | 2022 (Mezun)</li>
-                               <li class="list-inline"><span class="text-white">Lise, Uluslararası Murat Hüdavendigar AIHL </span>| Ortalama: 96.28/100</li>
+                               <li class="list-inline">Lise, Uluslararası Murat Hüdavendigar AIHL | 2022 (Mezun) | Ortalama: 96.28/100</li>
                              </ul>
     
                        </div>
@@ -89,12 +85,11 @@
               </article>
 
             <article>
-                   <div class="row mt-3 justify-content-start">
-                       <div class="col-1"></div>
-                       <div class="col-3"><p class="h5"><b>Bilgiler/Kurslar:</b></p></div>
+                   <div class="row mt-3 justify-content-center">
+                       <div class="col-10"><p class="h5"><b>Bilgiler/Kurslar:</b></p></div>
                    </div>
                    <div class="row mt-3 justify-content-center">
-                       <div class="col-10">
+                       <div class="col-md-10 mx-md-5 mx-xs-3">
                            <ul class="list-inline-item">
                                <li class="list-inline mb-1">Deep Learning</li>
                                <li class="list-inline mb-1">Sequence Modelling</li>
@@ -110,12 +105,11 @@
             </article>
 
             <article>
-                   <div class="row mt-3 justify-content-start">
-                     <div class="col-1"></div>
-                     <div class="col-3"><p class="h5"><b>Ödüller: </b></p></div>
+                   <div class="row mt-3 justify-content-center">
+                     <div class="col-10"><p class="h5"><b>Ödüller: </b></p></div>
                  </div>
                  <div class="row mt-3 justify-content-center">
-                     <div class="col-10">
+                     <div class="col-md-10 mx-md-5 mx-xs-3">
                          <ul class="list-inline-item">
                              <li class="list-inline mb-2">TEKNOFEST "İnsanlığın Yararına Teknoloji, Sosyal İnovasyon" Kategorisi, Lise Düzeyi Birincilik Ödülü - 29.09.2021</li>
                              <li class="list-inline mb-1">TÜBİTAK - Ulusal Proje Yarışması İkincilik Ödülü (Gümüş Madalya) - 08.06.2021</li>
@@ -126,12 +120,11 @@
             </article>
 
             <article>
-                 <div class="row mt-3 justify-content-start">
-                   <div class="col-1"></div>
-                   <div class="col-4"><p class="h5"><b>Sertifika ve Lisanslar: </b></p></div>
+                 <div class="row mt-3 justify-content-center">
+                   <div class="col-10"><p class="h5"><b>Sertifika ve Lisanslar: </b></p></div>
                </div>
                <div class="row mt-3 justify-content-center">
-                   <div class="col-10">
+                   <div class="col-md-10 mx-md-5 mx-xs-3">
                        <ul class="list-inline-item">
                            <li class="list-inline mb-2">Boğaziçi DataCamp'22 DataCamp Summit- Zirve Katılım Sertifikası</li>
                            <li class="list-inline mb-2">Deep Learning Specialization - Sequence Models (Coursera)</li>
@@ -158,12 +151,11 @@
             </article>
 
           <article>
-               <div class="row mt-3 justify-content-start">
-                 <div class="col-1"></div>
-                 <div class="col-3"><p class="h5"><b>Yabancı Diller: </b></p></div>
+               <div class="row mt-3 justify-content-center">
+                 <div class="col-10"><p class="h5"><b>Yabancı Diller: </b></p></div>
              </div>
              <div class="row mt-3 justify-content-center">
-                 <div class="col-10">
+                 <div class="col-md-10 mx-md-5 mx-xs-3">
                      <ul class="list-inline-item">
                          <li class="list-inline mb-2">İngilizce ve Fransızca konusunda profesyonel çalışma yetkinliği.</li>
                        </ul>
@@ -173,12 +165,11 @@
           </article>
     
           <article>
-             <div class="row mt-3 justify-content-start">
-               <div class="col-1"></div>
-               <div class="col-3"><p class="h5"><b>Sınav Sonuçları: </b></p></div>
+             <div class="row mt-3 justify-content-center">
+               <div class="col-10"><p class="h5"><b>Sınav Sonuçları: </b></p></div>
            </div>
            <div class="row mt-3 justify-content-center">
-               <div class="col-10">
+               <div class="col-md-10 mx-md-5 mx-xs-3">
                    <ul class="list-inline-item">
                        <li class="list-inline mb-2">YÖKDİL (ENG) - 90 (2023)</li>
                      </ul>
