--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             </div>
             <div class="card-text mx-5">
               <div class="social-links">
-                <p class="h5 mt-3 mb-3 text-center">Sosyal Medya</p>
+                <p class="h5 my-3 text-center">Sosyal Medya</p>
                 <ul class="list-inline text-center">
-                  <li class="list-inline-item mb-sm-2"><a href="https://github.com/IsmailKonak" class="btn btn-dark text-white"><i class="bi bi-github"> GitHub</i></a></li>
-                  <li class="list-inline-item mb-sm-2"><a href="https://www.linkedin.com/in/ismail-konak/" class="btn btn-dark text-white"><i class="bi bi-linkedin"> LinkedIn</i></a></li>
-                  <li class="list-inline-item mb-sm-5"><a href="https://twitter.com/ironism314" class="btn btn-dark text-white"><i class="bi bi-twitter"> Twitter</i></a></li>
-                  <li class="list-inline-item mb-sm-5"><a href="https://www.instagram.com/ironism314/" class="btn btn-dark text-white"><i class="bi bi-instagram"> Instagram</i></a></li>
+                  <li class="list-inline-item mb-md-5 mb-sm-2"><a href="https://github.com/IsmailKonak" class="btn btn-dark text-white"><i class="bi bi-github"> GitHub</i></a></li>
+                  <li class="list-inline-item mb-md-5 mb-sm-2"><a href="https://www.linkedin.com/in/ismail-konak/" class="btn btn-dark text-white"><i class="bi bi-linkedin"> LinkedIn</i></a></li>
+                  <li class="list-inline-item mb-md-5 mb-sm-2"><a href="https://twitter.com/ironism314" class="btn btn-dark text-white"><i class="bi bi-twitter"> Twitter</i></a></li>
+                  <li class="list-inline-item mb-md-5 mb-sm-2"><a href="https://www.instagram.com/ironism314/" class="btn btn-dark text-white"><i class="bi bi-instagram"> Instagram</i></a></li>
                 </ul>
               </div>
             </div>
