--- a/login.html
+++ b/login.html
@@ -53,12 +53,12 @@
           <div class="card rounded">
             <div class="container-fluid">
               <div class="row justify-content-center">
-                <div class="col-5">
+                <div class="col-xs-5">
                   <p class="h3 text-center mt-3"> Giriş Yap </p>
                 </div>
               </div>
               <div class="row justify-content-center">
-                <div class="col-10">
+                <div class="col-sm-11 col-xs-12">
                   <form action="login.php" method="post">
                     <div class="form-group my-5">
                       <label for="email">Kullanıcı Adı</label>
