--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -1,14 +1,14 @@
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Marvel">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Marvel">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>Mirasımız</title>
 </head>
 <body id="mirasimiz_sayfa">
@@ -60,12 +60,12 @@
                 </div>
                 <img src="img/laklakan.png" class="card-img-top" alt="">
                 <div class="row justify-content-start">
-                  <div class="col-7 mt-4 mx-3">
+                  <div class="col-xs-7 mt-4 mx-3 mx-xs-2">
                     <p class="h3 ">Dünyanın İlk Leylek Hastanesi: <b> Gurabahane-i Laklakan</b></p>
                   </div>
                 </div>
                 <div class="row mt-4 justify-content-start">
-                  <p class="mx-3 px-5 text-justify">Gurabahane-i Laklakan, Bursa'nın önemli bir mirasıdır. Bu tarihi yapı, leyleklerin ve göçmen kuşların korunması ve tedavisi için kurulmuştur. Osmanlı döneminden günümüze uzanan bu hastane, şehrin doğal denge ve hayvan sevgisiyle özdeşleşmiştir.
+                  <p class="mx-xs-3 px-4  text-justify">Gurabahane-i Laklakan, Bursa'nın önemli bir mirasıdır. Bu tarihi yapı, leyleklerin ve göçmen kuşların korunması ve tedavisi için kurulmuştur. Osmanlı döneminden günümüze uzanan bu hastane, şehrin doğal denge ve hayvan sevgisiyle özdeşleşmiştir.
 
                     Grégorie Bey'in öncülüğünde kurulan Gurabahane-i Laklakan, yaralı leylekleri tedavi etmek ve göç yoluna katılmalarını sağlamak amacıyla hizmet vermiştir. Yıllar içinde farklı amaçlarla kullanılan bu bina, geçmişteki hayvanseverlik anlayışını yansıtan bir sembol haline gelmiştir.
                     
